@@ -12,7 +12,7 @@ jerpa.homepage = http://jerpa.origo.ethz.ch/
 jerpa.authors = Vaclav Souhrada
 jerpa.contributions = Tomas Rondik,\
 					  Petr Soukal,\
-					  Jiri Kucera
+					  Jiri Kucera,
 
 jerpa.extension.project = jerpa
 jerpa.extension.files = jerpa, xml, edf, vhdr, arff, pdf
@@ -21,7 +21,8 @@ jerpa.perspective.path.package = ch.ethz.origo.jerpa.prezentation.perspective
 jerpa.perspective.list = SignalPerspective,\
 	AlgorithmPerspective,\
 	JERPAPerspective,\
-	DBPerspective
+	DBPerspective,\
+	EDEDBPerspective
 	
 jerpa.perspective.default = SignalPerspective
 
